--- a/aac/src/main/res/values/strings.xml
+++ b/aac/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AAC</string>
+    <string name="list_item_defalut">no available text shown</string>
 </resources>
